// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate acp --help 1`] = `
"chipmate acp

start ACP (Agent Client Protocol) server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: chipmate.local)
                                                                [string] [default: "chipmate.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
      --cwd          working directory [string] [default: "<HOME>"]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate mcp --help 1`] = `
"chipmate mcp

manage MCP (Model Context Protocol) servers

Commands:
  chipmate mcp add [name]     add an MCP server
  chipmate mcp list           list MCP servers and their status                        [aliases: ls]
  chipmate mcp auth [name]    authenticate with an OAuth-enabled MCP server
  chipmate mcp logout [name]  remove OAuth credentials for an MCP server
  chipmate mcp debug <name>   debug OAuth connection for an MCP server

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate attach --help 1`] = `
"chipmate attach <url>

attach to a running chipmate server

Positionals:
  url  http://localhost:4096                                                     [string] [required]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --dir           directory to run in                                                   [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
      --cloud-fork    fetch session from cloud and continue locally (use with --session)   [boolean]
  -p, --password      basic auth password (defaults to CHIPMATE_SERVER_PASSWORD)                [string]
  -u, --username      basic auth username (defaults to CHIPMATE_SERVER_USERNAME or 'chipmate')      [string]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate run --help 1`] = `
"chipmate run [message..]

run chipmate with a message

Positionals:
  message  message to send                                                     [array] [default: []]

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --command      the command to run, use message for args                               [string]
  -c, --continue     continue the last session                                             [boolean]
  -s, --session      session id to continue                                                 [string]
      --fork         fork the session before continuing (requires --continue or --session) [boolean]
      --cloud-fork   fetch session from cloud and continue locally (use with --session)    [boolean]
      --share        share the session                                                     [boolean]
  -m, --model        model to use in the format of provider/model                           [string]
      --agent        agent to use                                                           [string]
      --format       format: default (formatted) or json (raw JSON events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file         file(s) to attach to message                                            [array]
      --title        title for the session (uses truncated prompt if no value provided)     [string]
      --attach       attach to a running chipmate server (e.g., http://localhost:4096)          [string]
  -p, --password     basic auth password (defaults to CHIPMATE_SERVER_PASSWORD)                 [string]
  -u, --username     basic auth username (defaults to CHIPMATE_SERVER_USERNAME or 'chipmate')       [string]
      --dir          directory to run in, path on remote server if attaching                [string]
      --port         port for the local server (defaults to random port if no value provided)
                                                                                            [number]
      --variant      model variant (provider-specific reasoning effort, e.g., high, max, minimal)
                                                                                            [string]
      --thinking     show thinking blocks                                                  [boolean]
  -i, --interactive  run in direct interactive split-footer mode          [boolean] [default: false]
      --auto         auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate debug --help 1`] = `
"chipmate debug

debugging and troubleshooting tools

Commands:
  chipmate debug config        show resolved configuration
  chipmate debug lsp           LSP debugging utilities
  chipmate debug rg            ripgrep debugging utilities
  chipmate debug file          file system debugging utilities
  chipmate debug scrap         list all known projects
  chipmate debug skill         list all available skills
  chipmate debug snapshot      snapshot debugging utilities
  chipmate debug startup       print startup timing
  chipmate debug agent <name>  show agent configuration details
  chipmate debug v2            debug v2 catalog and built-in plugins
  chipmate debug info          show debug information
  chipmate debug paths         show global paths (data, config, cache, state)
  chipmate debug wait          wait indefinitely (for debugging)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate providers --help 1`] = `
"chipmate auth

manage AI providers and credentials

Commands:
  chipmate providers list               list providers and credentials                 [aliases: ls]
  chipmate providers login [url]        log in to a provider
  chipmate providers logout [provider]  log out from a configured provider

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate agent --help 1`] = `
"chipmate agent

manage agents

Commands:
  chipmate agent create  create a new agent
  chipmate agent list    list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate upgrade --help 1`] = `
"chipmate upgrade [target]

upgrade chipmate to the latest or a specific version

Positionals:
  target  version to upgrade to, for ex '0.1.48' or 'v0.1.48'                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -m, --method      installation method to use
                  [string] [choices: "curl", "npm", "yarn", "pnpm", "bun", "brew", "choco", "scoop"]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate uninstall --help 1`] = `
"chipmate uninstall

uninstall chipmate and remove all related files

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
  -c, --keep-config  keep configuration files                             [boolean] [default: false]
  -d, --keep-data    keep session data and snapshots                      [boolean] [default: false]
      --dry-run      show what would be removed without removing          [boolean] [default: false]
  -f, --force        skip confirmation prompts                            [boolean] [default: false]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate serve --help 1`] = `
"chipmate serve

starts a headless chipmate server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: chipmate.local)
                                                                [string] [default: "chipmate.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate models --help 1`] = `
"chipmate models [provider]

list all available models

Positionals:
  provider  provider ID to filter models by                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --verbose     use more verbose model output (includes metadata like costs)           [boolean]
      --refresh     refresh the models cache from models.dev                               [boolean]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate stats --help 1`] = `
"chipmate stats

show token usage and cost statistics

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --days        show stats for the last N days (default: all time)                      [number]
      --tools       number of tools to show (default: all)                                  [number]
      --models      show model statistics (default: hidden). Pass a number to show top N, otherwise
                    shows all
      --project     filter by project (default: all projects, empty string: current project)[string]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate export --help 1`] = `
"chipmate export [sessionID]

export session data as JSON

Positionals:
  sessionID  session id to export                                                           [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --sanitize    redact sensitive transcript and file data                              [boolean]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate import --help 1`] = `
"chipmate import <file>

import session data from JSON file or URL

Positionals:
  file  path to JSON file or share URL                                           [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate github --help 1`] = `
"chipmate github

manage GitHub agent

Commands:
  chipmate github install  install the GitHub agent
  chipmate github run      run the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate pr --help 1`] = `
"chipmate pr <number>

fetch and checkout a GitHub PR branch, then run chipmate

Positionals:
  number  PR number to checkout                                                  [number] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate session --help 1`] = `
"chipmate session

manage sessions

Commands:
  chipmate session list                list sessions
  chipmate session delete <sessionID>  delete a session

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate plugin --help 1`] = `
"chipmate plugin <module>

install plugin and update config

Positionals:
  module  npm module name                                                        [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -g, --global      install in global config                              [boolean] [default: false]
  -f, --force       replace existing plugin version                       [boolean] [default: false]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate db --help 1`] = `
"chipmate db

database tools

Commands:
  chipmate db [query]     open an interactive sqlite3 shell or run a query                     [default]
  chipmate db path        print the database path

Positionals:
  query  SQL query to execute                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --format      Output format                 [string] [choices: "json", "tsv"] [default: "tsv"]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate mcp list --help 1`] = `
"chipmate mcp list

list MCP servers and their status

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate mcp add --help 1`] = `
"chipmate mcp add [name]

add an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --url         URL for a remote MCP server                                             [string]
      --env         environment variable for a local MCP server (KEY=VALUE)                  [array]
      --header      HTTP header for a remote MCP server (KEY=VALUE)                          [array]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate mcp auth --help 1`] = `
"chipmate mcp auth [name]

authenticate with an OAuth-enabled MCP server

Commands:
  chipmate mcp auth list  list OAuth-capable MCP servers and their auth status         [aliases: ls]

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate mcp logout --help 1`] = `
"chipmate mcp logout [name]

remove OAuth credentials for an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate providers list --help 1`] = `
"chipmate providers list

list providers and credentials

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate providers login --help 1`] = `
"chipmate providers login [url]

log in to a provider

Positionals:
  url  chipmate auth provider                                                                   [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -p, --provider    provider id or name to log in to (skips provider selection)             [string]
  -m, --method      login method label (skips method selection)                             [string]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate providers logout --help 1`] = `
"chipmate providers logout [provider]

log out from a configured provider

Positionals:
  provider  provider id or name to log out from                                             [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate agent create --help 1`] = `
"chipmate agent create

create a new agent

Options:
  -h, --help                  show help                                                    [boolean]
  -v, --version               show version number                                          [boolean]
      --print-logs            print logs to stderr                                         [boolean]
      --log-level             log level         [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                 [boolean]
      --path                  directory path to generate the agent file                     [string]
      --description           what the agent should do                                      [string]
      --mode                  agent mode            [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [string]
  -m, --model                 model to use in the format of provider/model                  [string]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate agent list --help 1`] = `
"chipmate agent list

list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate session list --help 1`] = `
"chipmate session list

list sessions

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -n, --max-count   limit to N most recent sessions                                         [number]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]
  -a, --all         list sessions from all projects                       [boolean] [default: false]
  -s, --search      filter sessions by title                                                [string]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate session delete --help 1`] = `
"chipmate session delete <sessionID>

delete a session

Positionals:
  sessionID  session ID to delete                                                [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate github install --help 1`] = `
"chipmate github install

install the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate github run --help 1`] = `
"chipmate github run

run the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --event       GitHub mock event to run the agent for                                  [string]
      --token       GitHub personal access token (github_pat_********)                      [string]
"
`;

exports[`ChipMate CLI help-text snapshots every documented command emits stable help text: chipmate db path --help 1`] = `
"chipmate db path

print the database path

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;
